--- a/tests/test-pokerservice.py.in
+++ b/tests/test-pokerservice.py.in
@@ -243,6 +243,20 @@ class PokerServiceTestCaseBase(unittest.TestCase):
                 self.assertEqual(1, cursor.rowcount)
 
         cursor.close()
+    
+    def createTourneysSchedules(self):
+        cursor = self.db.cursor()
+        sql = '''
+            INSERT INTO `tourneys_schedule` (`name`, `description_short`, `description_long`, `players_quota`, `variant`, `betting_structure`, `seats_per_game`, `currency_serial`, `buy_in`, `rake`, `sit_n_go`, `start_time`, `register_time`, `respawn`, `respawn_interval`)
+            VALUES ('sitngo2', 'Sit and Go 2 players, Holdem', 'Sit and Go 2 players', '2', 'holdem', 'level-15-30-no-limit', '2', 1, '300000', '0', 'y', '0', '0', 'y', '0')
+        '''
+        cursor.execute(sql)
+        sql = '''
+            INSERT INTO `tourneys_schedule` (`name`, `description_short`, `description_long`, `players_quota`, `variant`, `betting_structure`, `seats_per_game`, `currency_serial`, `buy_in`, `rake`, `sit_n_go`, `breaks_interval`, `rebuy_delay`, `add_on`, `add_on_delay`, `start_time`, `register_time`, `respawn`, `respawn_interval`, `players_min`)
+            VALUES ('regular1', 'Holdem No Limit Freeroll', 'Holdem No Limit Freeroll', '1000', 'holdem', 'level-001', '10', 1, '0', '0', 'n', '60', '30', '1', '60', unix_timestamp(now() + INTERVAL 2 MINUTE), unix_timestamp(now() - INTERVAL 1 HOUR), 'n', '0', 3);
+        '''
+        cursor.execute(sql)
+        cursor.close()
 
 monitor_settings_xml = """<?xml version="1.0" encoding="ISO-8859-1"?>
 <server verbose="6" ping="300000" autodeal="yes" max_joined="1000" simultaneous="4" chat="yes" >
@@ -803,7 +817,10 @@ class GetTableBestByCriteriaTestCase(PokerServiceTestCaseBase):
         self.assertEquals(foundTable, None)
 #####################################################################
 class TourneySelectTestCase(PokerServiceTestCaseBase):
-
+    def setUp(self,settingsFile=settings_xml):
+        PokerServiceTestCaseBase.setUp(self, settingsFile)
+        self.createTourneysSchedules()
+        
     def test00_all(self):
         self.service.startService()
         tourneys = self.service.tourneySelect('')
@@ -861,8 +878,7 @@ class TourneySelectTestCase(PokerServiceTestCaseBase):
         self.assertEqual('sitngo2', tourneys[0]['name'])
         self.assertEqual(heads_up.serial, tourneys[0]['serial'])
         self.assertEqual(0, tourneys[0]['registered'])
-        self.service.tourneyRegister(PacketPokerTourneyRegister(serial = self.user2_serial,
-                                                                game_id = heads_up.serial))
+        self.service.tourneyRegister(PacketPokerTourneyRegister(serial = self.user2_serial, game_id = heads_up.serial))
         tourneys = self.service.tourneySelect('')
         self.assertEqual(2, len(tourneys))
         self.assertEqual('sitngo2', tourneys[0]['name'])
@@ -1178,10 +1194,9 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
         settings.header = settings.doc.xpathNewContext()
         self.service = pokerservice.PokerService(settings)
 
-        for (key, value) in ( ('position', '60'), ('autodeal', '18'),
-                              ('showdown', '30'), ('round', '12'), ('finish', '18')):
+        for (key, value) in (('position','60'), ('autodeal','18'), ('showdown','30'), ('round','12'), ('finish','18')):
             self.assertEquals(self.service.delays[key], value)
-        for (key, value) in ( ('serial', '1'), ('amount', '10000000')):
+        for (key, value) in (('serial','1'), ('amount','10000000')):
             self.assertEquals(self.service.refill[key], value)
 
         self.assertEquals(joined_max, self.service.joined_max)
@@ -1235,9 +1250,10 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
         self.configValues(settings_xml.replace('max_joined="1000"', ""), 4000)
 
     def test00_03_configValues(self):
-        self.configValues(settings_xml.replace('max_joined="1000"',
-                                               'max_missed_round="5" max_queued_client_packets="100"'),
-                          4000, 5, queuedPacketMax=100)
+        self.configValues(settings_xml.replace(
+            'max_joined="1000"','max_missed_round="5" max_queued_client_packets="100"'),
+            4000, 5, queuedPacketMax=100
+        )
 
     def test00_4_badLocaleObject(self):
         """test00_4_badLocaleObject
@@ -1554,6 +1570,7 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
         self.assertEquals("", player_image2.image)
 
     def test13_checkTourneysSchedule_spawn_regular(self):
+        self.createTourneysSchedules()
         pokerservice.UPDATE_TOURNEYS_SCHEDULE_DELAY = 1
         pokerservice.CHECK_TOURNEYS_SCHEDULE_DELAY = 0.5
 
@@ -1644,6 +1661,7 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
         return d
     
     def test14_checkTourneysSchedule_cancel_regular(self):
+        self.createTourneysSchedules()
         pokerservice.DELETE_OLD_TOURNEYS_DELAY = 0
         pokerservice.UPDATE_TOURNEYS_SCHEDULE_DELAY = 1
         pokerservice.CHECK_TOURNEYS_SCHEDULE_DELAY = 0.1
@@ -1694,6 +1712,7 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
         self.assertEqual(111, service.sng_timeout)
 
     def test14_checkTourneysSchedule_cancel_sitngo(self):
+        self.createTourneysSchedules()
         self.service.startService()
         self.service.sng_timeout = 0
         heads_up_before = [t for t in self.service.tourneys.values() if t.name=='sitngo2'][0]
@@ -1707,6 +1726,7 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
         self.assertEqual(heads_up_before.schedule_serial, heads_up_after2.schedule_serial)
 
     def test14_1_checkTourneysSchedule_cancel_sitngo_already_canceled(self):
+        self.createTourneysSchedules()
         self.service.startService()
         self.service.sng_timeout = 0
         (heads_up_before,) = filter(lambda tourney: tourney.name == 'sitngo2', self.service.tourneys.values())
@@ -1717,7 +1737,8 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
     def test15_runTourney(self):
         pokerservice.UPDATE_TOURNEYS_SCHEDULE_DELAY = 1
         pokerservice.CHECK_TOURNEYS_SCHEDULE_DELAY = 0.1
-
+        
+        self.createTourneysSchedules()
         self.service.startService()
         self.createUsers()
 
@@ -1779,7 +1800,9 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
     def runTourney_freeroll(self, has_bailor):
         pokerservice.UPDATE_TOURNEYS_SCHEDULE_DELAY = 1
         pokerservice.CHECK_TOURNEYS_SCHEDULE_DELAY = 0.1
-
+        
+        self.createTourneysSchedules()
+        
         #
         # A regular tournament starts registration now
         #
@@ -1853,6 +1876,7 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
             self.assertEquals(self.service.joinedCountReachedMax(),val >= expectedMax)
         self.service.stopService()
     def test20_spawnTourneyCurrencySerialFromDateFormat(self):
+        self.createTourneysSchedules()
         cursor = self.db.cursor()
         currency_serial_from_date_format = '%Y%m'
         cursor.execute("UPDATE tourneys_schedule SET currency_serial_from_date_format = '%s' WHERE name = 'sitngo2'" % currency_serial_from_date_format)
@@ -1872,6 +1896,7 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
         tourney = self.service.tourneys[tourney_serial]
         self.assertEqual(currency_serial_from_date, tourney.currency_serial)
     def test20_spawnTourneyPrizeCurrencyFromDateFormat(self):
+        self.createTourneysSchedules()
         cursor = self.db.cursor()
         prize_currency_from_date_format = '%W'
         cursor.execute("UPDATE tourneys_schedule SET prize_currency_from_date_format = '%s' WHERE name = 'sitngo2'" % prize_currency_from_date_format)
@@ -1893,11 +1918,13 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
     def test21_today(self):
         self.assertEqual(self.service.today(), date.today())
     def test22_spawnTourneyBadCurrencySerialFromDateFormat(self):
+        self.createTourneysSchedules()
         cursor = self.db.cursor()
         cursor.execute("UPDATE tourneys_schedule SET currency_serial_from_date_format = 'NaN666' WHERE name = 'sitngo2'")
         cursor.close()
         self.assertRaises(UserWarning, self.service.startService)
     def test22_spawnTourneyBadPrizeCurrencyFromDateFormat(self):
+        self.createTourneysSchedules()
         cursor = self.db.cursor()
         cursor.execute("UPDATE tourneys_schedule SET prize_currency_from_date_format = 'NaN666' WHERE name = 'sitngo2'")
         cursor.close()
@@ -2187,8 +2214,12 @@ class TourneyCancelTestCase(PokerServiceTestCaseBase):
         self.service.tourneys = {}
         self.service.tourneyCancel(Tournament())
         self.assertTrue(search_output('tourneyCancel:'))
-# ----------------------------------------------------------------
+
 class TourneyManagerTestCase(PokerServiceTestCaseBase):
+    def setUp(self,settingsFile=settings_xml):
+        PokerServiceTestCaseBase.setUp(self, settingsFile)
+        self.createTourneysSchedules()
+        
     class ClientMockup:
         def __init__(self, serial, testObject):
             self.serial = serial
@@ -2495,12 +2526,15 @@ class TourneyMovePlayerTestCase(PokerServiceTestCaseBase):
         self.assertFalse(self.service.tourneyMovePlayer(TourneyMovePlayerTestCase.Tournament(), table_serial, 200, wrong_user_serial))
         cursor.close()
 
-# ----------------------------------------------------------------
 class TourneyNotifyTestCase(PokerServiceTestCaseBase):
+    def setUp(self,settingsFile=settings_xml):
+        PokerServiceTestCaseBase.setUp(self, settingsFile)
+        self.createTourneysSchedules()
     def startTournament(self, table_serial, table_money):
         #
         # start tournament
         #
+        self.createTourneysSchedules()
         tourney_serial, schedule = self.service.tourneys_schedule.items()[0]
         self.service.spawnTourney(schedule)
         self.service.tourneyRegister(PacketPokerTourneyRegister(serial = self.user1_serial,
@@ -2512,10 +2546,12 @@ class TourneyNotifyTestCase(PokerServiceTestCaseBase):
         self.assertEqual(tourney_serial, packet.tourney['serial'])
         self.assertNotEqual(None, packet.tourney['rank2prize'])
         self.assertEqual(1, packet.tourney['registered'])
-        self.assertEqual({'4' : {'rank': -1,
-                                 'table_serial': table_serial,
-                                 'name' : 'user1',
-                                 'money': table_money}}, packet.user2properties)
+        self.assertEqual({'4' : {
+            'rank': -1,
+            'table_serial': table_serial,
+            'name' : 'user1',
+            'money': table_money
+        }}, packet.user2properties)
 
     def test01_notifyStart(self):
         self.service.startService()
@@ -2874,7 +2910,10 @@ class ShutdownCheckTestCase(PokerServiceTestCaseBase):
         return d
 
 class TourneySatelliteTestCase(PokerServiceTestCaseBase):
-
+    def setUp(self,settingsFile=settings_xml):
+        PokerServiceTestCaseBase.setUp(self, settingsFile)
+        self.createTourneysSchedules()
+        
     def test_lookup_nop(self):
         class Tournament:
             def __init__(self):
@@ -3050,7 +3089,10 @@ class TourneySatelliteTestCase(PokerServiceTestCaseBase):
         cursor.close()
 
 class TourneyFinishedTestCase(PokerServiceTestCaseBase):
-
+    def setUp(self,settingsFile=settings_xml):
+        PokerServiceTestCaseBase.setUp(self, settingsFile)
+        self.createTourneysSchedules()
+        
     class ClientMockup:
         def __init__(self, serial, testObject):
             self.serial = serial
@@ -6430,92 +6472,6 @@ class PokerXMLCoverageTestCase(unittest.TestCase):
         pxml.log.error("Test an error")
         self.assertEquals(get_messages(), ['Test an error'])
 ##############################################################################
-class PokerXMLRPCCoverageTestCase(unittest.TestCase):
-    def test01_render_dummyXMLCall(self):
-        service = MockServiceForPokerXML()
-        pxmlrpc = pokerservice.PokerXMLRPC(service)
-        request = MockRequestForPokerXML(MockContentForPokerXML("""<?xml version="1.0"?>
-<methodCall>
-<methodName>examples.Nothing</methodName>
-<params>
-<param>  <value><i4>41</i4></value>  </param>
-</params></methodCall>"""))
-
-        clear_all_messages()
-        self.assertEquals(pxmlrpc.render(request), """<?xml version='1.0'?>
-<methodResponse>
-<params>
-<param>
-<value><array><data>
-</data></array></value>
-</param>
-</params>
-</methodResponse>
-""")
-        self.assertEquals(len(service.destroyedAvatars), 1)
-        self.assertEquals(service.destroyedAvatars[0].name, "MOCK_CREATE_AVATAR_0")
-        self.assertEquals(service.destroyedAvatars[0], service.avatar)
-        self.assertEquals(service.oldAvatars, [])
-        self.assertEquals(service.createAvatarCount, 1)
-
-        self.assertEquals(len(request.headerData.keys()), 2)
-        self.assertEquals(request.headerData['Content-length'],  ['138'])
-        self.assertEquals(request.headerData['Content-type'], ['text/xml; charset="ISO-8859-1"'])
-        msgs = get_messages()
-        self.failUnless(len(msgs) >= 2, "Missing Message Output")
-        self.failUnless(search_output('render '), "Missing render output")
-        self.failUnless(search_output('result_string '), "Missing result_string output")
-##############################################################################
-class PokerSOAPCoverageTestCase(unittest.TestCase):
-    def test01_render_dummySOAPCall(self):
-        service = MockServiceForPokerXML()
-        psoap = pokerservice.PokerSOAP(service)
-        request = MockRequestForPokerXML(MockContentForPokerXML("""<?xml version="1.0" encoding="utf-8"?>
-<soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/" xmlns:soapenc="http://schemas.xmlsoap.org/soap/encoding/" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-<soap:Body soap:encodingStyle="http://schemas.xmlsoap.org/soap/encoding/">
-<SomeMethod>
-<Result>
-<Packet>
-   <type>PacketPing</type>
-</Packet>
-</Result>
-</SomeMethod>
-</soap:Body>
-</soap:Envelope>"""))
-
-        clear_all_messages()
-        val = psoap.render(request)
-        self.assertEquals(val, """<?xml version="1.0" encoding="ISO-8859-1"?>
-<SOAP-ENV:Envelope
-  SOAP-ENV:encodingStyle="http://schemas.xmlsoap.org/soap/encoding/"
-  xmlns:SOAP-ENC="http://schemas.xmlsoap.org/soap/encoding/"
-  xmlns:xsi="http://www.w3.org/1999/XMLSchema-instance"
-  xmlns:SOAP-ENV="http://schemas.xmlsoap.org/soap/envelope/"
->
-<SOAP-ENV:Body>
-<returnPacket SOAP-ENC:root="1">
-<Result SOAP-ENC:arrayType="ns1:SOAPStruct[0]" xsi:type="SOAP-ENC:Array" xmlns:ns1="http://soapinterop.org/xsd">
-</Result>
-</returnPacket>
-</SOAP-ENV:Body>
-</SOAP-ENV:Envelope>
-""")
-        self.assertEquals(len(service.destroyedAvatars), 1)
-        self.assertEquals(service.destroyedAvatars[0].name, "MOCK_CREATE_AVATAR_0")
-        self.assertEquals(service.destroyedAvatars[0], service.avatar)
-        self.assertEquals(service.oldAvatars, [])
-        self.assertEquals(service.createAvatarCount, 1)
-
-        self.assertEquals(len(request.headerData.keys()), 2)
-        self.assertEquals(request.headerData['Content-length'],  ['538'])
-        self.assertEquals(request.headerData['Content-type'], ['text/xml; charset="ISO-8859-1"'])
-        msgs = get_messages()
-        self.failUnless(len(msgs) >= 2, "Missing Message Output")
-        self.failUnless(search_output("args = [{'Packet': {'type': 'PacketPing'}}]"),
-                        'Missing args')
-        self.failUnless(search_output('render '), "Missing render output")
-        self.failUnless(search_output('result_string '), "Missing result_string output")
-##############################################################################
 class TourneySelectInfoTestCase(unittest.TestCase):
 
     def test01_not_found(self):
@@ -6659,7 +6615,6 @@ class LadderTestCase(PokerServiceTestCaseBase):
         packet = self.service.getLadder(game_id, 2, 1)
         self.assertEqual(game_id, packet.game_id)
 
-# ----------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
 #    loader.methodPrefix = "test07_"
@@ -6692,8 +6647,6 @@ def Run():
     suite.addTest(loader.loadClass(PokerTreeCoverageTestCase))
     suite.addTest(loader.loadClass(PokerRestTreeCoverageTestCase))
     suite.addTest(loader.loadClass(PokerXMLCoverageTestCase))
-    #suite.addTest(loader.loadClass(PokerXMLRPCCoverageTestCase))
-    #suite.addTest(loader.loadClass(PokerSOAPCoverageTestCase))
     suite.addTest(loader.loadClass(TourneySelectInfoTestCase))
     suite.addTest(loader.loadClass(TourneyNotifyTestCase))
     suite.addTest(loader.loadClass(LadderTestCase))
@@ -6704,7 +6657,6 @@ def Run():
         tracebackFormat='default',
         ).run(suite)
 
-# ----------------------------------------------------------------
 if __name__ == '__main__':
     if Run().wasSuccessful():
         sys.exit(0)
